--- a/modules/administration-guide/pages/installing-che-in-an-oidc-unsupported-kubernetes.adoc
+++ b/modules/administration-guide/pages/installing-che-in-an-oidc-unsupported-kubernetes.adoc
@@ -159,7 +159,7 @@ users:
       - --oidc-extra-scope="email offline_access profile openid"
 ----
 +
-. Set the created `kubeconfig` as current by backingup existing `kubeconfig` in the current user's `.kube` or `$KUBECONFIG` folder and replacing it with the newly created one.
+. Make the newly created `kubeconfig`` the current one by backing up the existing `kubeconfig`` file in the user's .kube or $KUBECONFIG folder and replacing it with the new `config` file.
 
 . Verify the vCluster cluster status:
 
@@ -172,7 +172,7 @@ $ kubectl get ns
 . If everything is configured correctly, you will be redirected to authenticate with your auth server in the browser. Once authenticated you will be able to view all the namspaces. 
 
 +
-IMPORTANT: Make sure the user has `vcluster-admin` group assignedav.
+IMPORTANT: Make sure the user has `vcluster-admin` group assigned.
 +
 
 . Prepare the `CheCluster` patch.
