--- a/modules/administration-guide/pages/installing-che-in-an-oidc-unsupported-kubernetes.adoc
+++ b/modules/administration-guide/pages/installing-che-in-an-oidc-unsupported-kubernetes.adoc
@@ -159,7 +159,7 @@ users:
       - --oidc-extra-scope="email offline_access profile openid"
 ----
 +
-. Make the newly created `kubeconfig`` the current one by backing up the existing `kubeconfig`` file in the user's .kube or $KUBECONFIG folder and replacing it with the new `config` file.
+. Make the newly created `kubeconfig` the current one by backing up the existing `kubeconfig`` file in the user's .kube or $KUBECONFIG folder and replacing it with the new `config` file.
 
 . Verify the vCluster cluster status:
 
