remove redirection (issue #22831)

--- a/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
+++ b/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
@@ -26,7 +26,7 @@ $ {orch-cli} create configmap che-git-self-signed-cert \
   --from-literal=githost=__<git_server_url>__ -n {prod-namespace}  <2>
 ----
 <1> Path to the self-signed certificate.
-<2> Optional parameter to specify the Git server URL e.g. `https://git.example.com:8443`. When omitted, the self-signed certificate is used for all repositories over HTTPS.
+<2> Optional parameter to specify the Git server URL e.g. pass: c,a,q`[https://git.example.com:8443`]. When omitted, the self-signed certificate is used for all repositories over HTTPS.
 +
 [NOTE]
 ====
