--- a/modules/administration-guide/pages/configuring-number-of-replicas.adoc
+++ b/modules/administration-guide/pages/configuring-number-of-replicas.adoc
@@ -4,5 +4,5 @@
 :navtitle: Configuring number of replicas for a {prod} container
 :page-aliases:
 
-include::partial$proc_configuring-number-of-replicas.adoc[leveloffset=+1]
+include::partial$proc_configuring-number-of-replicas.adoc
 
