--- a/modules/administration-guide/pages/installing-che-in-an-oidc-unsupported-kubernetes.adoc
+++ b/modules/administration-guide/pages/installing-che-in-an-oidc-unsupported-kubernetes.adoc
@@ -132,28 +132,28 @@ spec:
                   number: 80
 EOF
 ----
-. Access Keycloak UI by reaching out to the `https://KEYCLOAK_DOMAIN/auth` URL in any browser, login in with the user credentials. Now to configure Admin User Account. Navigate to Users, click `admin` and make sure First Name, Last Name, and Email are filled in and Email Verified is set to `True`.  
+. Access Keycloak UI by reaching out to the `https://KEYCLOAK_DOMAIN/auth` URL in any browser, login in with the user credentials. Now to configure Admin User Account. Navigate to Users, click `admin` and make sure "FirstName", "LastName", and Email are filled in and Email Verified is set to `True`.  
 +
-image::che-in-oidc-unsupported-kubernetes-configure-user.png[Keycloak Configure User]
+image::installing-che-in-oidc-unsupported-kubernetes/che-in-oidc-unsupported-kubernetes-configure-user.png[Keycloak Configure User]
 +
 . Create ClientID in Keycloak for `vCluster` and {orch-cli}. Access the Keycloak UI using the URL `https://$KEYCLOAK_DOMAIN/auth` and log in with the credentials `admin/admin`. Navigate to `Client` Page and Create Client with the following configurations
 +
-image::installing-che-in-oidc-unsupported-kubernetes/installing-che-in-oidc-unsupported-kubernetes/che-in-oidc-unsupported-kubernetes-step-1.png[Keycloak Create Client Step 1]
-image::installing-che-in-oidc-unsupported-kubernetes/installing-che-in-oidc-unsupported-kubernetes/che-in-oidc-unsupported-kubernetes-step-2.png[Keycloak Create Client Step 2]
-image::installing-che-in-oidc-unsupported-kubernetes/installing-che-in-oidc-unsupported-kubernetes/che-in-oidc-unsupported-kubernetes-step-3.png[Keycloak Create Client Step 3]
+image::installing-che-in-oidc-unsupported-kubernetes/che-in-oidc-unsupported-kubernetes-create-client-step-1.png[Keycloak Create Client Step 1]
+image::installing-che-in-oidc-unsupported-kubernetes/che-in-oidc-unsupported-kubernetes-create-client-step-2.png[Keycloak Create Client Step 2]
+image::installing-che-in-oidc-unsupported-kubernetes/che-in-oidc-unsupported-kubernetes-create-client-step-3.png[Keycloak Create Client Step 3]
 +
 
 . Create `vcluster-admin` group in Keycloak and assign the user to the group. Assign `cluster-admin` role to the `admin` user. Navigate to Users page and select `admin` user.
 +
-image::installing-che-in-oidc-unsupported-kubernetes/installing-che-in-oidc-unsupported-kubernetes/che-in-oidc-unsupported-kubernetes-create-group.png[Keycloak Create Group]
-image::installing-che-in-oidc-unsupported-kubernetes/installing-che-in-oidc-unsupported-kubernetes/che-in-oidc-unsupported-kubernetes-assign-group.png[Keycloak Assign Group]
+image::installing-che-in-oidc-unsupported-kubernetes/che-in-oidc-unsupported-kubernetes-create-group.png[Keycloak Create Group]
+image::installing-che-in-oidc-unsupported-kubernetes/che-in-oidc-unsupported-kubernetes-assign-group.png[Keycloak Assign Group]
 +
 . To Create ClientID in Keycloak for {prod-short}, access the Keycloak UI and Navigate to `Client` Page. Create Client with the following configurations. Note down the client credientials, client ID and client secret created by follwing these steps, this will be used later when deploying {prod-short} using {prod-cli}. 
 +
 image::installing-che-in-oidc-unsupported-kubernetes/che-in-oidc-unsupported-kubernetes-create-private-client-step-1.png[Keycloak Create Client for Eclipse Che Step 1]
 image::installing-che-in-oidc-unsupported-kubernetes/che-in-oidc-unsupported-kubernetes-create-private-client-step-2.png[Keycloak Create Client for Eclipse Che Step 2]
 image::installing-che-in-oidc-unsupported-kubernetes/che-in-oidc-unsupported-kubernetes-create-private-client-step-3.png[Keycloak Create Client for Eclipse Che Step 3]
-image::installing-che-in-oidc-unsupported-kubernetes/che-in-oidc-unsupported-kubernetes-create-private-client-step-4.png[Keycloak Client Credentials for Eclipse Che]
+image::installing-che-in-oidc-unsupported-kubernetes/che-in-oidc-unsupported-kubernetes-create-private-client-step-4.png[Keycloak Client Credentials for Eclipse Che Step 4]
 +
 . Create `values.yaml` for vCluster's helm chart:
 +
