--- a/modules/administration-guide/pages/installing-che-in-an-oidc-unsupported-kubernetes.adoc
+++ b/modules/administration-guide/pages/installing-che-in-an-oidc-unsupported-kubernetes.adoc
@@ -311,8 +311,7 @@ IMPORTANT: Make sure the user has `vcluster-admin` group assigned.
 
 [subs="+attributes"]
 ----
-$ helm install  cert-manager jetstack/cert-manager  --namespace cert-manager  --create-namespace  --version v1.14.4  --set installCRDs=true && helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
-helm repo update && helm upgrade --install ingress-nginx ingress-nginx/ingress-nginx \
+$ helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx && helm repo update && helm upgrade --install ingress-nginx ingress-nginx/ingress-nginx \
     --version 4.7.1 \
     --namespace ingress-basic \
     --create-namespace \
