--- a/modules/administration-guide/pages/installing-che-in-an-oidc-unsupported-kubernetes.adoc
+++ b/modules/administration-guide/pages/installing-che-in-an-oidc-unsupported-kubernetes.adoc
@@ -315,7 +315,7 @@ $ helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx && helm
     --version 4.7.1 \
     --namespace ingress-basic \
     --create-namespace \
-    --set controller.replicaCount=1 \
+    --set controller.replicaCount=1
 ----
 
 . 
