--- a/modules/administration-guide/pages/running-containers-with-kubedock.adoc
+++ b/modules/administration-guide/pages/running-containers-with-kubedock.adoc
@@ -4,12 +4,12 @@
 :navtitle: Running containers with kubedock
 :page-aliases:
 
-[id="running-containers-swith-kubedock"]
+[id="running-containers-with-kubedock"]
 = Running containers with kubedock
 
-With this update, link:https://github.com/joyrex2001/[kubedock] is now a part of the UDI ({prod-short} default image). If the environment variable `KUBEDOCK_ENABLED` is set to `true` in a workspace (this can be done using a devfile), the kubedock server is started at startup.
-
-When `KUBEDOCK_ENABLED=true` then the following commands will be executed with kubedock. The remaining commands, in particular, `podman build`, will be executed by the local Podman:
+Use link:https://github.com/joyrex2001/[kubedock] to run containers as Kubernetes pods.
+After enabling the kubedock environment variable,
+kubedock will run the following `podman` commands:
 
 * `podman run`
 * `podman ps`
@@ -23,9 +23,19 @@ When `KUBEDOCK_ENABLED=true` then the following commands will be executed with k
 * `podman stop`
 * `podman start`
 
-The kubedock approach allows to run containers from a container running on Kubernetes but has a few limits:
+Other commands such as `podman build` are started by the local Podman instead.
 
-    podman build -t <image> . && podman run <image> doesn't work and should be replaced with podman build -t <image> . && podman push <image> && podman run <image>. That's because kubedock runs the container as a Kubernetes pod and, as a result, the kubelet on the node will try to pull <image> and will fail if it cannot find it.
-    Clients that use the podman or docker API need to be configured to point to kubedock setting CONTAINER_HOST=tcp://127.0.0.1:2475 or DOCKER_HOST=tcp://127.0.0.1:2475 when they run containers and configured to point to local podman when building the container (something impracticable in some cases).
-    Some podman comands such as generate kube are not supported yet
-    If the option --env is provided then the command podman run fails
+[IMPORTANT]
+====
+Using kubedock has the following limitations:
+
+* The `podman build -t <image> . && podman run <image>` command will fail. Use `podman build -t <image> . && podman push <image> && podman run <image>` instead.
+* The `podman generate kube` command is not supported.
+* `--env` option causes the `podman run` command to fail.
+
+
+
+
+
+
+Clients that use the podman or docker API need to be configured to point to kubedock setting CONTAINER_HOST=tcp://127.0.0.1:2475 or DOCKER_HOST=tcp://127.0.0.1:2475 when they run containers and configured to point to local podman when building the container (something impracticable in some cases).
