Simplify KIP doc
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/examples/snip_che-cloning-image-puller-project.adoc
+++ b/modules/administration-guide/examples/snip_che-cloning-image-puller-project.adoc
@@ -1,7 +1,6 @@
 :_content-type: SNIPPET
 
-[subs="+attributes"]
+[source,bash,subs="+attributes,+quotes"]
 ----
-$ git clone https://github.com/che-incubator/{image-puller-repository-name}
-$ cd {image-puller-repository-name}/deploy/openshift
+git clone https://github.com/che-incubator/{image-puller-repository-name}
 ----
