Add pages about configuring image-puller
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -47,6 +47,9 @@
 ** xref:caching-images-for-faster-workspace-start.adoc[]
 *** xref:installing-image-puller-by-using-cli.adoc[]
 *** xref:installing-image-puller-on-openshift-using-the-web-console.adoc[]
+*** xref:configuring-image-puller-to-pre-pull-default-che-images.adoc[]
+*** xref:configuring-image-puller-to-override-default-che-images.adoc[]
+*** xref:configuring-image-puller-to-pre-pull-additional-images.adoc[]
 ** xref:configuring-observability.adoc[]
 **** xref:the-woopra-telemetry-plugin.adoc[]
 **** xref:creating-a-telemetry-plugin.adoc[]
