--- a/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
+++ b/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
@@ -20,6 +20,12 @@ therefore improving the workspace start time.
 
 * xref:installing-image-puller-on-openshift-using-the-web-console.adoc[]
 
+* xref:configuring-image-puller-to-pre-pull-default-che-images.adoc[]
+
+* xref:configuring-image-puller-to-override-default-che-images.adoc[]
+
+* xref:configuring-image-puller-to-pre-pull-additional-images.adoc[]
+
 .Additional resources
 
 * link:https://github.com/che-incubator/{image-puller-repository-name}[{image-puller-name} source code repository]
