--- a/modules/administration-guide/pages/trusted-extensions-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/trusted-extensions-for-microsoft-visual-studio-code.adoc
@@ -21,7 +21,7 @@ This is particularly useful when you have extensions that require access to serv
 Note that this should be used with caution as it could potentially lead to security risks if misused. Only trusted extensions should be given this access.
 
 .Procedure
-Since the VS Code editor is bundled within `che-code` image, it is possible to change the `product.json` file only when the workspace is started up.
+Since the Visual Studio Code editor is bundled within `che-code` image, it is possible to change the `product.json` file only when the workspace is started up.
 To do that it needs to define __VSCODE_TRUSTED_EXTENSIONS__ environment variable and specify one or several extensions separated by comma.
 [source,yaml]
 ----
