--- a/modules/administration-guide/pages/trusted-extensions-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/trusted-extensions-for-microsoft-visual-studio-code.adoc
@@ -16,7 +16,7 @@ You can use the `trustedExtensionAuthAccess` field in the `product.json` file of
 	]
 ----
 
-This is particularly useful when you have extensions that require access to services such as GitHub, Microsoft, or any other service that requires OAuth. By adding the extension IDs to this field, you’re granting them the permission to access these tokens.
+This is particularly useful when you have extensions that require access to services such as GitHub, Microsoft, or any other service that requires OAuth. By adding the extension IDs to this field, you are granting them the permission to access these tokens.
 
 Note that this should be used with caution as it could potentially lead to security risks if misused. Only trusted extensions should be given this access.
 
