--- a/modules/administration-guide/pages/trusted-extensions-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/trusted-extensions-for-microsoft-visual-studio-code.adoc
@@ -18,7 +18,10 @@ You can use the `trustedExtensionAuthAccess` field in the `product.json` file of
 
 This is particularly useful when you have extensions that require access to services such as GitHub, Microsoft, or any other service that requires OAuth. By adding the extension IDs to this field, you are granting them the permission to access these tokens.
 
-Note that this should be used with caution as it could potentially lead to security risks if misused. Only trusted extensions should be given this access.
+[WARNING]
+====
+Use the `trustedExtensionAuthAccess` field with caution as it could potentially lead to security risks if misused. Give access only to trusted extensions.
+====
 
 .Procedure
 Since the Visual Studio Code editor is bundled within `che-code` image, it is possible to change the `product.json` file only when the workspace is started up.
