--- a/modules/administration-guide/pages/trusted-extensions-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/trusted-extensions-for-microsoft-visual-studio-code.adoc
@@ -35,4 +35,7 @@ To do that it needs to define __VSCODE_TRUSTED_EXTENSIONS__ environment variable
      - name: VSCODE_TRUSTED_EXTENSIONS
        value: "<publisher1>.<extension1>,<publisher2>.<extension2>"
 ----
-The value of the variable will be parsed on the workspace startup and the corresponding `trustedExtensionAuthAccess` section will be added to the `product.json`.
+
+.Verification
+
+* The value of the variable will be parsed on the workspace startup and the corresponding `trustedExtensionAuthAccess` section will be added to the `product.json`.
