--- a/modules/administration-guide/pages/trusted-extensions-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/trusted-extensions-for-microsoft-visual-studio-code.adoc
@@ -28,7 +28,7 @@ Use the `trustedExtensionAuthAccess` field with caution as it could potentially 
 ====
 Since the Visual Studio Code editor is bundled within `che-code` image, you can only change the `product.json` file when the workspace is started up.
 ====
-To do that it needs to define __VSCODE_TRUSTED_EXTENSIONS__ environment variable and specify one or several extensions separated by comma.
+* Define the __VSCODE_TRUSTED_EXTENSIONS__ environment variable and specify one or several extensions separated by comma.
 [source,yaml]
 ----
    env:
