--- a/modules/administration-guide/partials/proc_configuring-dns-on-microsoft-azure.adoc
+++ b/modules/administration-guide/partials/proc_configuring-dns-on-microsoft-azure.adoc
@@ -17,7 +17,7 @@ Configure DNS on Microsoft Azure. Before you start, make sure you have a registe
 +
 [source,shell]
 ----
-export DOMAIN_NAME=azr.my-ide.cloud
+DOMAIN_NAME=azr.my-ide.cloud
 ----
 
 . Create a DNS zone:
