--- a/modules/administration-guide/partials/proc_installing-cert-manager-on-microsoft-azure-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_installing-cert-manager-on-microsoft-azure-kubernetes-service.adoc
@@ -9,7 +9,7 @@ Learn how to install cert-manager on Microsoft Azure {kubernetes} Service.
 
 .Procedure
 
-. Install the cert-manager:
+. Install link:https://cert-manager.io[cert-manager]
 +
 [source,shell,subs="attributes+"]
 ----
