--- a/modules/administration-guide/partials/proc_installing-nginx-ingress-controller-on-microsoft-azure-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_installing-nginx-ingress-controller-on-microsoft-azure-kubernetes-service.adoc
@@ -9,7 +9,7 @@ Use the following instructions to install the NGINX Ingress Controller on Micros
 
 .Procedure
 
-. Install NGINX Ingress Controller:
+. Install link:https://docs.nginx.com/nginx-ingress-controller[NGINX Ingress Controller]:
 +
 [source,shell,subs="attributes+"]
 ----
