--- a/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
+++ b/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
@@ -10,19 +10,21 @@
 
 To improve the start time performance of {prod-short} workspaces,
 use the {image-puller-name-short}, a {prod-short}-agnostic component that can be used
-to pre-pull images for {platforms-name} clusters. The {image-puller-name-short} is an
+to pre-pull images for {platforms-name} clusters.
+
+The {image-puller-name-short} is an
 additional {platforms-name} deployment which creates a _DaemonSet_ that can be
 configured to pre-pull relevant {prod-short} workspace images on each node.
 These images would already be available when a {prod-short} workspace starts,
 therefore improving the workspace start time.
 
-* xref:installing-image-puller-by-using-cli.adoc[]
+* xref:installing-image-puller-on-kubernetes-by-using-cli.adoc[]
 
-* xref:installing-image-puller-on-openshift-using-the-web-console.adoc[]
+* xref:installing-image-puller-on-openshift-by-using-the-web-console.adoc[]
 
 * xref:configuring-image-puller-to-pre-pull-default-che-images.adoc[]
 
-* xref:configuring-image-puller-to-override-default-che-images.adoc[]
+* xref:configuring-image-puller-to-pre-pull-custom-images.adoc[]
 
 * xref:configuring-image-puller-to-pre-pull-additional-images.adoc[]
 
