--- a/modules/administration-guide/pages/installing-image-puller-on-openshift-by-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-image-puller-on-openshift-by-using-the-web-console.adoc
@@ -1,13 +1,13 @@
 :_content-type: PROCEDURE
-:description: Installing {image-puller-name-short} on OpenShift using the web console
+:description: Installing {image-puller-name-short} on OpenShift by using the web console
 :keywords: administration-guide, image-puller, openshift, operator, operatorhub
-:navtitle: Installing {image-puller-name-short} on OpenShift using the web console
-:page-aliases: .:installing-image-puller-on-openshift-using-operatorhub.adoc, installing-image-puller-on-openshift-using-operatorhub.adoc
+:navtitle: Installing {image-puller-name-short} on OpenShift by using the web console
+:page-aliases: .:installing-image-puller-on-openshift-by-using-operatorhub.adoc, installing-image-puller-on-openshift-using-operatorhub.adoc
 
 [id="installing-image-puller-on-openshift-by-using-the-web-console"]
 = Installing {image-puller-name-short} on OpenShift by using the web console
 
-You can install the {image-puller-operator-name} on OpenShift using the OpenShift web console.
+You can install the {image-puller-operator-name} on OpenShift by using the OpenShift web console.
 
 .Prerequisites
 
