--- a/modules/administration-guide/pages/configuring-image-puller-to-pre-pull-custom-images.adoc
+++ b/modules/administration-guide/pages/configuring-image-puller-to-pre-pull-custom-images.adoc
@@ -1,7 +1,7 @@
 :_content-type: PROCEDURE
 :description: Configuring {image-puller-name-short} to pre-pull custom images
 :keywords: administration-guide, image-puller, CLI
-:navtitle: You can configure {image-puller-name} to pre-pull custom images
+:navtitle: Configuring {image-puller-name-short} to pre-pull custom images
 :page-aliases:
 
 [id="configuring-image-puller-to-pre-pull-custom-images"]
