--- a/modules/administration-guide/pages/trusted-extensions-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/trusted-extensions-for-microsoft-visual-studio-code.adoc
@@ -7,7 +7,7 @@
 = Configure trusted extensions for Microsoft Visual Studio Code
 
 
-You can use the `trustedExtensionAuthAccess` field in the `product.json` file of Visual Studio Code to specify which extensions are trusted to access authentication tokens.
+You can use the `trustedExtensionAuthAccess` field in the `product.json` file of Microsoft Visual Studio Code to specify which extensions are trusted to access authentication tokens.
 [source,json]
 ----
 	"trustedExtensionAuthAccess": [
