--- a/modules/administration-guide/pages/trusted-extensions-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/trusted-extensions-for-microsoft-visual-studio-code.adoc
@@ -26,7 +26,7 @@ Use the `trustedExtensionAuthAccess` field with caution as it could potentially 
 .Procedure
 [IMPORTANT]
 ====
-Since the Visual Studio Code editor is bundled within `che-code` image, you can only change the `product.json` file when the workspace is started up.
+Since the Microsoft Visual Studio Code editor is bundled within `che-code` image, you can only change the `product.json` file when the workspace is started up.
 ====
 
 The first you need to define __VSCODE_TRUSTED_EXTENSIONS__ environment variable and specify one or several extensions separated by comma. The value of the variable will be taken and parsed right after workspace is started and the corresponding `trustedExtensionAuthAccess` section will be added to the `product.json` right before the Visual Studio Code is started.
