--- a/modules/administration-guide/pages/trusted-extensions-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/trusted-extensions-for-microsoft-visual-studio-code.adoc
@@ -32,7 +32,9 @@ Since the Microsoft Visual Studio Code editor is bundled within `che-code` image
 ====
 
 
-.Define the __VSCODE_TRUSTED_EXTENSIONS__ environment variable in the devfile.yaml.
+. Define the __VSCODE_TRUSTED_EXTENSIONS__ environment variable. Choose between defining the variable in devfile.yaml or mounting a ConfigMap with the variable instead.
+.. Define the __VSCODE_TRUSTED_EXTENSIONS__ environment variable in devfile.yaml:
++
 ====
 [source,yaml]
 ----
@@ -42,7 +44,8 @@ Since the Microsoft Visual Studio Code editor is bundled within `che-code` image
 ----
 ====
 
-.Mount a ConfigMap with __VSCODE_TRUSTED_EXTENSIONS__ environment variable.
+.. Mount a ConfigMap with __VSCODE_TRUSTED_EXTENSIONS__ environment variable:
++
 ====
 [source,yaml]
 ----
