--- a/modules/administration-guide/pages/installing-che-on-the-virtual-kubernetes-cluster.adoc
+++ b/modules/administration-guide/pages/installing-che-on-the-virtual-kubernetes-cluster.adoc
@@ -7,6 +7,10 @@
 [id="installing-{prod-short}-on-the-virtual-kubernetes-cluster.adoc"]
 = Installing {prod-short} on the virtual {kubernetes} cluster
 
+With vCluster, you can run a virtual {kubernetes} cluster running entirely on pods within an actual {kubernetes} cluster. Unlike a typical {kubernetes} cluster, virtual clusters do not have their own node pools or networking. The workloads are scheduled inside the underlying host-namespace.  
+
+TIP: You can also use vClusters to install {prod-short} in cases where {prod-short} cannot be installed. For example, when the {prod-short} installation requires a specific version of {kubernetes} that is not supported by the {prod-short} installer or when the cloud provider doesn't provider doesn't support external OIDC, running {prod-short} within vCluster would help circumvent the issue.
+
 This section describe how to install {prod-short} on the virtual link:https://www.vcluster.com/docs/what-are-virtual-clusters[{kubernetes} cluster].
 
 .Prerequisites
