--- a/modules/administration-guide/pages/installing-che-on-the-virtual-kubernetes-cluster.adoc
+++ b/modules/administration-guide/pages/installing-che-on-the-virtual-kubernetes-cluster.adoc
@@ -9,7 +9,7 @@
 
 With vCluster, you can run a virtual {kubernetes} cluster running entirely on pods within an actual {kubernetes} cluster. Unlike a typical {kubernetes} cluster, virtual clusters do not have their own node pools or networking. The workloads are scheduled inside the underlying host namespace.  
 
-TIP: You can also use vClusters to install {prod-short} in cases where {prod-short} typically cannot be installed. For example, when the {prod-short} installation is to be installed in a specific version of {kubernetes} cluster that is not supported by the {prod-short} or when the cloud provider doesn't support external OIDC, running {prod-short} within vCluster would help circumvent the issue.
+TIP: You can also use vClusters to install {prod-short} in cases where {prod-short} typically cannot be installed. For example, when {prod-short} is to be installed in a specific version of {kubernetes} cluster that is not supported by the {prod-short} or when the cloud provider doesn't support external OIDC, running {prod-short} within vCluster would help circumvent the issue.
 
 This section describe how to install {prod-short} on the virtual link:https://www.vcluster.com/docs/what-are-virtual-clusters[{kubernetes} cluster].
 
