--- a/modules/administration-guide/pages/installing-che-on-the-virtual-kubernetes-cluster.adoc
+++ b/modules/administration-guide/pages/installing-che-on-the-virtual-kubernetes-cluster.adoc
@@ -7,11 +7,11 @@
 [id="installing-{prod-short}-on-the-virtual-kubernetes-cluster.adoc"]
 = Installing {prod-short} on the virtual {kubernetes} cluster
 
-With vCluster, you can run a virtual {kubernetes} cluster running entirely on pods within an actual {kubernetes} cluster. Unlike a typical {kubernetes} cluster, virtual clusters do not have their own node pools or networking. The workloads are scheduled inside the underlying host-namespace.  
-
-TIP: You can also use vClusters to install {prod-short} in cases where {prod-short} cannot be installed. For example, when the {prod-short} installation requires a specific version of {kubernetes} that is not supported by the {prod-short} installer or when the cloud provider doesn't provider doesn't support external OIDC, running {prod-short} within vCluster would help circumvent the issue.
-
 This section describe how to install {prod-short} on the virtual link:https://www.vcluster.com/docs/what-are-virtual-clusters[{kubernetes} cluster].
+
+Virtual clusters are fully working {kubernetes} clusters that run on top of other  {kubernetes} clusters. Compared to fully separate "real" clusters, virtual clusters reuse worker nodes and networking of the host cluster. They have their own control plane and schedule all workloads into a single namespace of the host cluster. Like virtual machines, virtual clusters partition a single physical cluster into multiple separate ones.
+
+`vClusters` offer a solution for deploying {prod-short} in scenarios where its installation would normally be impossible. This includes situations where the desired version of a {kubernetes} cluster is incompatible with {prod-short}, or when the Cloud Service Provider lacks support for external OIDC. Utilizing `vClusters` allows bypassing these constraints, enabling {prod-short} to function as needed.
 
 .Prerequisites
 
